message ModelB {
    int32 id = 1;
    string name = 2;
    repeated ModelA model_as = 3;
}
